<resources>
    <string name="app_name">Jarvis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="investment_portfolio">Investment Portfolio</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="have_no_account">Have no account?</string>
    <string name="create_one">Create one</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="cash_placement_yield"><![CDATA[Cash Placement & Yield]]></string>
    <string name="performance_risk_measurement"><![CDATA[Performance & Risk Measurement]]></string>
    <string name="username">Username</string>
    <string name="watchlist">Watchlist</string>
    <string name="summary_parameters">Summary Parameters</string>
    <string name="news_analysis"><![CDATA[News & Analysis]]></string>
    <string name="reset_simulation">Reset Simulation</string>
    <string name="calculate">Calculate</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vestibulum lacinia laoreet.
        Proin eget eros dapibus, pharetra mauris quis, semper odio. Nunc at dignissim elit. Mauris lacinia ex vitae ante
        lacinia, nec pharetra eros sodales. Vestibulum eleifend arcu massa, sed rhoncus lorem convallis sed. Vestibulum
        ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas in mi sit amet tellus
        fringilla consequat.
    </string>
    <string name="observations_portfolio_impact"><![CDATA[Observations & Portfolio Impact]]></string>
    <string name="title_activity_user_profile_fragment">UserProfileFragment</string>
</resources>
