<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity"
        android:background="@color/white"
        android:orientation="vertical">


    <ImageView
            android:transitionName="splash_photo"
            android:src="@drawable/ic_jarvis_logo"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="Sign In"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintBottom_toTopOf="@+id/inputLoginEmail"
            android:layout_marginBottom="16dp"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:id="@+id/inputLoginEmail"
            app:layout_constraintBottom_toTopOf="@+id/inputLoginPassword">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/editLoginUsername"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/inputLoginEmail"
            app:layout_constraintEnd_toEndOf="@+id/inputLoginEmail"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/inputLoginEmail"
            android:id="@+id/inputLoginPassword"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/editLoginPassword"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:textAllCaps="false"
            android:text="@string/log_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/inputLoginPassword"
            app:layout_constraintStart_toStartOf="@+id/inputLoginPassword"
            app:layout_constraintEnd_toEndOf="@+id/inputLoginPassword"
            app:layout_constraintBottom_toTopOf="@+id/textView5"/>
    <TextView
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintBottom_toTopOf="@+id/textView6"/>
    <TextView
            android:textSize="12sp"
            android:textColor="@color/gray_500"
            android:text="@string/have_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintHorizontal_chainStyle="packed"/>
    <TextView
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:padding="4dp"
            android:textSize="12sp"
            android:text="@string/create_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView6"/>
</android.support.constraint.ConstraintLayout>